# Racer

./: .gitignore  Dockerfile  README.md  run.sh  run_record.sh  sim_run.sh  sim_run_record.sh
Hardware/: PartsList.md
setup_for_jetson/: Dockerfile  docker_build.sh  docker_run.sh
setup_for_ubuntu/: Dockerfile_all  Dockerfile_for_ubuntu  Dockerfile_for_ubuntu_foxy  Dockerfile_for_ubuntu_galactic  docker_build.sh  (+9 more)
src/racer/: package.xml  setup.cfg  setup.py
src/racer/config/: config.yaml  config_autodriving.yaml  config_data_collection.yaml
src/racer/launch/: gazebo_manual.launch.py  joy.launch.py  key.launch.py  racer.launch.py  racer_record.launch.py  rviz_manual.launch.py  sim_racer.launch.py
src/racer/models/1can/: model.config  model.sdf
src/racer/models/1can/materials/scripts/: tape.material
src/racer/models/3cans/: model.config  model.sdf
src/racer/models/3cans_shortcut/: model.config  model.sdf
src/racer/models/5cans/: model.config  model.sdf
src/racer/models/6cans/: model.config  model.sdf
src/racer/models/prius/: model.config  model.sdf
src/racer/models/prius_fullscale/: model.sdf
src/racer/models/racer_ground/: model.config  model.sdf
src/racer/models/racer_ground/materials/scripts/: course_ground.material
src/racer/models/yellow_can/: model.config  model.sdf
src/racer/params/: model.pt  motors.json
src/racer/racer/: camera.py  front_camera.py  joy_ctl.py  joystick.py  key_ctl.py  keyboard.py  mode.py  nn_ctl.py  priority.py  r_motor.py  s_motor.py
src/racer/worlds/: gazebo_testcourse.world  walls.world  walls2.world
(+36 files in other folders)
