<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>racer</name>
  <version>0.0.0</version>
  <description>Racer</description>
  <maintainer email="kurokis@users.noreply.github.com">kuroki</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sys</exec_depend>
  <exec_depend>termios</exec_depend>
  <exec_depend>tty</exec_depend>
  <exec_depend>future</exec_depend>
  <exec_depend>python-pygame</exec_depend>
  <exec_depend>subprocess</exec_depend>

  <exec_depend>numpy</exec_depend>
  <exec_depend>torch</exec_depend>
  <exec_depend>torchsummary</exec_depend>
  <exec_depend>adafruit-circuitpython-pca9685</exec_depend>
  <exec_depend>board</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
